--- a/load_tester/package.json
+++ b/load_tester/package.json
@@ -6,8 +6,10 @@
   "dependencies": {
     "@types/node": "^22.15.21",
     "axios": "^1.9.0",
+    "canvas": "^3.1.0",
     "chart.js": "^4.4.9",
     "chartjs-node-canvas": "^5.0.0",
+    "chartjs-plugin-annotation": "^3.1.0",
     "sharp": "^0.34.2"
   }
 }
