--- a/dispatcher/package.json
+++ b/dispatcher/package.json
@@ -1,15 +1,27 @@
 {
   "name": "dispatcher",
-  "version": "1.0.0",
+  "version": "1",
   "main": "index.js",
   "license": "MIT",
+  "scripts": {
+    "dev": "nodemon --exec npx ts-node src/index.ts",
+    "build": "tsc",
+    "start": "npx ts-node src/index.ts"
+  },
   "dependencies": {
-    "@types/express": "^5.0.2",
-    "@types/node": "^22.15.21",
-    "multer": "^2.0.0",
+    "@types/cors": "^2.8.19",
+    "axios": "^1.10.0",
+    "body-parser": "^2.2.0",
+    "cors": "^2.8.5",
+    "morgan-body": "^2.6.9",
+    "node-cache": "^5.1.2",
+    "node-cron": "^4.1.1",
+    "ultimate-express": "^2.0.6"
+  },
+  "devDependencies": {
+    "@types/node": "^24.0.3",
     "nodemon": "^3.1.10",
     "ts-node": "^10.9.2",
-    "typescript": "^5.8.3",
-    "ultimate-express": "^2.0.2"
+    "typescript": "^5.8.3"
   }
 }
